# candidate-profile-fusion

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: assignment_config.json  default_config.json  example_config.json  minimal_config.json
docs/: design_one_pager.md  importantdoc.md
output/: out_assignment.json  out_custom.json  out_default.explain.txt  out_default.json  out_example.json  out_minimal.json
sample_inputs/: ats_export.json  candidates.csv  github_users.json  linkedin_sample.json  recruiter_notes.txt  resume_sample.docx
src/: __init__.py  __main__.py  cli.py  confidence.py  detect.py  merge.py  normalize.py  project.py  schema.py  validate.py
src/extract/: __init__.py  ats_json.py  base.py  csv_extractor.py  github.py  notes.py  resume.py
tests/: __init__.py  test_confidence.py  test_edge_cases.py  test_extractors.py  test_merge.py  test_normalize.py  test_project.py  test_validate.py
