[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "candidate-etl"
version = "1.0.0"
description = "Candidate data ETL pipeline — multi-source ingestion, normalization, merge, and configurable projection"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.0",
    "phonenumbers>=8.13",
    "pycountry>=23.12",
    "python-dateutil>=2.8",
    "pdfplumber>=0.10",
    "python-docx>=1.0",
    "rapidfuzz>=3.0",
    "requests>=2.31",
    "jsonschema>=4.20",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
candidate-etl = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
